User can now see his personal training requests